syntax = "proto3";
option csharp_namespace = "GrpcClient";

package yourservice;

// 서비스 정의
service YourService {
    rpc YourMethod (YourRequest2) returns (YourResponse2);
    rpc GetToken (TokenRequest) returns (TokenResponse);
}

// 요청 메시지 정의
message YourRequest2 {
    string request_data = 1;
}

// 응답 메시지 정의
message YourResponse2 {
    string response_data = 1;
}

message TokenRequest {
    string username = 1;
    string password = 2;
}

message TokenResponse {
    string token = 1;
}